Fix logo image source formatting in index.html
Updated the logo image source in index.html to remove quotes.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     ::before 
     <header>
       <a id="logo" href="Superswag Studio">
-        <img src="https://www.canva.com/design/DAGiM5WcZXk/9SCiF3xWD4OUeswFRc5eJA/edit"
-          width= "666" height= "666" class="no-filter">
+        <img src=https://www.canva.com/design/DAGiM5WcZXk/9SCiF3xWD4OUeswFRc5eJA/edit          width= "666" height= "666" class="no-filter">
       </a>
       <span id="yagline"> -- For The Collective"--</span>
       <script type="text/javascript"> ==$0
