Refactor index.html by removing meta tags
Removed obsolete meta tags and updated tagline element. - trying to fix front page

--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
   <head>
     <script type= "text/javascript"></script>
   <meta charset="utf-8">
-    <meta content="IE=edge,chrome=1" http-equiv="X-Au-compatible">
-    <link rel="stylesheet" href="/application.min.1958976399628c8c6865d9865e85a37556bfbf0340fe190674d75ebb586eb560.css">
   </head>
 <body id="install">
-  <div class="inner">
-    ::before 
-    <header>
-      <a id="logo" href="Superswag Studio">
-        <img src=https://www.canva.com/design/DAGiM5WcZXk/9SCiF3xWD4OUeswFRc5eJA/edit          width= "666" height= "666" class="no-filter">
-      </a>
-      <span id="yagline"> -- For The Collective"--</span>
+      <span id="tagline"> -- For The Collective"--</span>
       <script type="text/javascript"> ==$0
   cont taglines =[ 
     "fast-version-control",
