Fix tagline formatting in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   </head>
 <body id="install">
-      <span id="tagline"> -- For The Collective"--</span>
+      <span id="tagline"> -- For The Collective--</span>
       <script type="text/javascript"> ==$0
   cont taglines =[ 
     "fast-version-control",
