--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <div class="install-header">
                       <h1>Superswag Studios</h1>
                       <div class="version-badge">
+                        <img src= "https://github.com/lowrderrr/-/blob/main/superswagstudios2.pdf.png?raw=true" width= "666" height= "666" >
 
                         "For The Collective"
 
