Refactor HTML structure and add center tag
Reformatted HTML structure and added a center tag.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 <body id="install">
       <span id="tagline"> -- For The Collective--</span>
 
-   <p>
+  <centre>
+
+       <p>
 
                         <strong>
                           "The Creative Collective"
                         </strong>
                         
-                      </p>
+       </p>    
   
+  </centre>
+
       <script type="text/javascript"> ==$0
   cont taglines =[ 
     "fast-version-control",
