--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </script>
              
     </header>
-          
+  
+          <div class= "inner">
               <div id="content-wrapper">
                 <div tabindex ="1" class="sidebar-bnt"> 
                 </div>
