Fix HTML syntax issues in index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOC TYPE html>
 <html lang= "en" class=" js fontface" ==$0
-
    <title>Superswag Studio</title> 
-  <style> html, body { height: 100%; margin: 0; } body { background-color: red;
-                                                                                   color: #fff; font-family: system-ui, Arial, sans-serif; display: flex; flex-direction: column; min-height: 100%; }
-     
+  <style> html, body { height: 100%; margin: 0; } body { background-color: red;                                                                      color: #fff; font-family: system-ui, Arial, sans-serif; display: flex; flex-direction: column; min-height: 100%; }
      header, main, footer { max-width: 900px; margin: 0 auto; padding: 1rem; }
 
   <head>
@@ -13,7 +10,7 @@
   </head>
 <body id="install">
 
-  <bg color= red>
+  <bg color= red;>
 
   <centre>
 
