Add Shop link to the navigation menu

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                         <a href="about"> About </a>
                           <li>
                             <a href="Community">Community</a>
+     <li>
+     <a href="shop">Shop</a>
                           </li>
                     </ul>
                       </li>
