--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOC TYPE html>
 <html lang= "en" class=" js fontface" ==$0
    <title>Superswag Studio</title> 
-  <style> html, body { height: 100%; margin: 0; } body { background-color: red;                                                                      color: #fff; font-family: system-ui, Arial, sans-serif; display: flex; flex-direction: column; min-height: 100%; }
+  <style> html, body { height: 100%; margin: 0; } body {                                                                       color: #fff; font-family: system-ui, Arial, sans-serif; display: flex; flex-direction: column; min-height: 100%; }
      header, main, footer { max-width: 900px; margin: 0 auto; padding: 1rem; }
 
   <head>
@@ -9,6 +9,8 @@
   <meta charset="utf-8">
   </head>
 <body id="install">
+
+     background-color: violet;
 
   <centre>
 
